--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "React",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack-dev-server --open --hot"
+    "start": "webpack-dev-server --mode=development --config  ./webpack.config.js",
+    "build": "webpack --mode=production --config ./webpack.config.js",
+    "dev": "webpack-dev-server --open --hot",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "react"
@@ -18,6 +19,8 @@
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
